fix layout issues, particularly when resizing
- output options was using span instead of div, making the whole thing
  weird.
- the editor would always be too large before (by the size of a title
  element) due to probably some weird flexbox configuration. Now use CSS
  variable to calculate the proper size to avoid all of these issues.
- use split.js for detecting layout updates, instead of resize observer

--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,11 @@ main > * {
 }
 
 .container {
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
+	--title-height: 2em;
 	flex-grow: 1;
+	overflow: hidden;
+	position: relative;
+	min-height: var(--title-height);
 }
 
 .container .name {
@@ -46,9 +47,12 @@ main > * {
 	margin-block: .2em;
 	display: inline;
 	font-size: 2em;
+	height: var(--title-height);
 }
 
 .container .content {
-	flex-grow: 1;
+	display: block;
 	border: .3em inset;
+	width: 100%;
+	height: calc(100% - var(--title-height))
 }
